# KPI

.github/workflows/: main.yml
FisrtSemester/Algorithms_and_DataStructures/lab1/: main.c
FisrtSemester/Algorithms_and_DataStructures/lab1/with_boolean/: main.c
FisrtSemester/Algorithms_and_DataStructures/lab1/without_boolean/: main.c
FisrtSemester/Algorithms_and_DataStructures/lab2/: lab2.c
FisrtSemester/Algorithms_and_DataStructures/lab3/: add_task.c  lab3.c
FisrtSemester/Algorithms_and_DataStructures/lab4/: main.c  task.c
FisrtSemester/Programming/HomeCntrlWork/: hwc.c
FisrtSemester/Programming/Labs1-6/lab1/: main.c
FisrtSemester/Programming/Labs1-6/lab2/: main.c
FisrtSemester/Programming/Labs1-6/lab3/: main.c
FisrtSemester/Programming/Labs1-6/lab4/: main.c
FisrtSemester/Programming/Labs1-6/lab5/: Students.txt  lab5.c
PlantCareCalcPlus/: .gitignore  CMakeLists.txt  README.md  main.cpp
PlantCareCalcPlus/src/core/: CareCalculator.cpp  CareCalculator.h  PlantProfile.cpp  PlantProfile.h
PlantCareCalcPlus/src/storage/: ProfileRepository.cpp  ProfileRepository.h
PlantCareCalcPlus/src/ui/: MainWindow.cpp  MainWindow.h  MainWindow.ui
SecondSemester/Algorithms_and_DataStructures/CourseWork_prjct/: 3D_filling.c  3D_filling.h  3D_sorting.c  3D_sorting.h  Makefile  common.c  common.h  main.c  measurement.c  measurement.h  menu.c  menu.h  print_3D.c  print_3D.h  print_vector.c  print_vector.h  vector_filling.c  vector_filling.h  vector_sorting.c  vector_sorting.h
SecondSemester/Programming/rgrSecondSem/: main.cpp
(+27 files in other folders)
